--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             }
 
         }
-        var devicePlatform
+        var devicePlatform;
         function clear_Storage() {
             localStorage.clear();
             devicePlatform = device.platform;
