--- a/sections/section_1_1.html
+++ b/sections/section_1_1.html
@@ -29,6 +29,7 @@
 
         <script>
             //autoload audio
+            devicePlatform = device.platform;
             alert(devicePlatform);
             if (devicePlatform === 'iOS') {
                 alert("iOS");
