--- a/sections/section_2_1.html
+++ b/sections/section_2_1.html
@@ -10,10 +10,56 @@
 
     <div data-role="page" data-position="fixed">
         <div data-role="header">
+            <div>
+                <img id='audio2_1on' src="../images/audio_on.jpg" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
+                <img id='audio2_1off' src="../images/audio_off.jpg" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
+            </div>
             <h1>Types of Anxious Thoughts</h>
         </div>
         <!-- /header -->
+        <audio style='visibility:hidden' width="0" height="0" id='audio2_1iOS' controls>
+            <source src="../audio/1_1.mp4" type="video/mp4">
+            <source src="../audio/1_1.mp3" type="video/mp3">
+            Your browser does not support this audio format.
+        </audio>
+        <video style='visibility:hidden' width="0" height="0" id='audio2_1Android' controls>
+            <source src="../audio/1_1.mp4" type="video/mp4">
+            <source src="../audio/1_1.mp3" type="video/mp3">
+            <source src="../audio/1_1.mp3" type="audio/ogg">
+            <source src="../audio/1_1.mp3" type="video/ogg">
+            Your browser does not support this audio format.
+        </video>
 
+
+        <script>
+            //autoload audio
+            var section = "audio2_1";
+            devicePlatform = device.platform;
+            if (devicePlatform === 'iOS') {
+                var audio = document.getElementById(section+"iOS");
+            } else {
+                var audio = document.getElementById(section+"Android");
+            }
+
+            if (localStorage['audio'] === 'true') {
+                document.getElementById(section+"on").style.visibility = "hidden";
+                document.getElementById(section+"off").style.visibility = "visible";
+                audio.play();
+            }
+            function playAudio() {
+                if (localStorage['audio'] === 'true') {
+                    localStorage['audio'] = 'false';
+                    document.getElementById(section+"on").style.visibility = "visible";
+                    document.getElementById(section+"off").style.visibility = "hidden";
+                    audio.pause();
+                } else {
+                    localStorage['audio'] = 'true';
+                    document.getElementById(section+"on").style.visibility = "hidden";
+                    document.getElementById(section+"off").style.visibility = "visible";
+                    audio.play();
+                }
+            }
+        </script>
         <div data-role="content">
             <p>
                 We are all familiar with basic types of anxious thinking, such as:
