--- a/sections/section_1_1.html
+++ b/sections/section_1_1.html
@@ -33,7 +33,12 @@
         <script>
             //autoload audio
             var section = "audio1_1";
-            devicePlatform = device.platform;
+            if (typeof(device) != "undefined") {
+                devicePlatform = device.platform;
+            } else {
+                devicePlatform = "Android";
+            }
+            
             if (devicePlatform === 'iOS') {
                 var audio = document.getElementById(section+"iOS");
             } else {
