--- a/sections/section_4_6.html
+++ b/sections/section_4_6.html
@@ -8,8 +8,58 @@
 <body>
 
     <div class='background_sky'>
+        <div>
+            <img id='audio4_6on' src="../images/audio_on.jpg" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
+            <img id='audio4_6off' src="../images/audio_off.jpg" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
+        </div>
     </div>
+        <audio style='visibility:hidden' width="0" height="0" id='audio4_6iOS' controls>
+            <source src="../audio/1_1.mp4" type="video/mp4">
+            <source src="../audio/1_1.mp3" type="video/mp3">
+            Your browser does not support this audio format.
+        </audio>
+        <video style='visibility:hidden' width="0" height="0" id='audio4_6Android' controls>
+            <source src="../audio/1_1.mp4" type="video/mp4">
+            <source src="../audio/1_1.mp3" type="video/mp3">
+            <source src="../audio/1_1.mp3" type="audio/ogg">
+            <source src="../audio/1_1.mp3" type="video/ogg">
+            Your browser does not support this audio format.
+        </video>
 
+
+        <script>
+            //autoload audio
+            var section = "audio4_6";
+            if (typeof(device) != "undefined") {
+                devicePlatform = device.platform;
+            } else {
+                devicePlatform = "Android";
+            }
+            if (devicePlatform === 'iOS') {
+                var audio = document.getElementById(section+"iOS");
+            } else {
+                var audio = document.getElementById(section+"Android");
+            }
+
+            if (localStorage['audio'] === 'true') {
+                document.getElementById(section+"on").style.visibility = "hidden";
+                document.getElementById(section+"off").style.visibility = "visible";
+                audio.play();
+            }
+            function playAudio() {
+                if (localStorage['audio'] === 'true') {
+                    localStorage['audio'] = 'false';
+                    document.getElementById(section+"on").style.visibility = "visible";
+                    document.getElementById(section+"off").style.visibility = "hidden";
+                    audio.pause();
+                } else {
+                    localStorage['audio'] = 'true';
+                    document.getElementById(section+"on").style.visibility = "hidden";
+                    document.getElementById(section+"off").style.visibility = "visible";
+                    audio.play();
+                }
+            }
+        </script>
     <div data-role="header" style='position:absolute;bottom: 0;width:100%;'>
         <div data-role="navbar">
             <ul>
