--- a/sections/section_1_2.html
+++ b/sections/section_1_2.html
@@ -32,7 +32,11 @@
         <script>
             //autoload audio
             var section = "audio1_2";
-            devicePlatform = device.platform;
+            if (typeof(device) != "undefined") {
+                devicePlatform = device.platform;
+            } else {
+                devicePlatform = "Android";
+            }
             if (devicePlatform === 'iOS') {
                 var audio = document.getElementById(section+"iOS");
             } else {
