--- a/sections/section_2_1.html
+++ b/sections/section_2_1.html
@@ -34,7 +34,11 @@
         <script>
             //autoload audio
             var section = "audio2_1";
-            devicePlatform = device.platform;
+            if (typeof(device) != "undefined") {
+                devicePlatform = device.platform;
+            } else {
+                devicePlatform = "Android";
+            }
             if (devicePlatform === 'iOS') {
                 var audio = document.getElementById(section+"iOS");
             } else {
