--- a/sections/section_1_3.html
+++ b/sections/section_1_3.html
@@ -10,8 +10,8 @@
     <div data-role="page" data-position="fixed">
         <div data-role="header">
             <div>
-                <img id='audio1_3on' src="../images/audio_on.jpg" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
-                <img id='audio1_3off' src="../images/audio_off.jpg" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
+                <img id='audio1_3on' src="../images/audio_on.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
+                <img id='audio1_3off' src="../images/audio_off.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
             </div>
             <h1>Fusion vs. Defusion</h>
         </div>
