--- a/sections/section_4_3.html
+++ b/sections/section_4_3.html
@@ -9,7 +9,7 @@
 
     <div class='background_movietheater'>
         <div>
-            <img id='audio4_3on' src="../images/audio_on.jpg" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
+            <img id='audio4_3on' src="../images/audio_on.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
             <img id='audio4_3off' src="../images/audio_off.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
         </div>
     </div>
