--- a/sections/section_2_1.html
+++ b/sections/section_2_1.html
@@ -11,8 +11,8 @@
     <div data-role="page" data-position="fixed">
         <div data-role="header">
             <div>
-                <img id='audio2_1on' src="../images/audio_on.jpg" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
-                <img id='audio2_1off' src="../images/audio_off.jpg" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
+                <img id='audio2_1on' src="../images/audio_on.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
+                <img id='audio2_1off' src="../images/audio_off.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
             </div>
             <h1>Types of Anxious Thoughts</h>
         </div>
