--- a/sections/section_4_4.html
+++ b/sections/section_4_4.html
@@ -9,8 +9,8 @@
 
     <div class='background_waterfall'>
         <div>
-            <img id='audio4_4on' src="../images/audio_on.jpg" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
-            <img id='audio4_4off' src="../images/audio_off.jpg" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
+            <img id='audio4_4on' src="../images/audio_on.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
+            <img id='audio4_4off' src="../images/audio_off.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
         </div>
     </div>
         <audio style='visibility:hidden' width="0" height="0" id='audio4_4iOS' controls>
