--- a/sections/section_5.html
+++ b/sections/section_5.html
@@ -10,8 +10,8 @@
     <div data-role="page" data-position="fixed" id='page'>
         <div data-role="header">
             <div>
-                <img id='audio5on' src="../images/audio_on.jpg" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
-                <img id='audio5off' src="../images/audio_off.jpg" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
+                <img id='audio5on' src="../images/audio_on.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
+                <img id='audio5off' src="../images/audio_off.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
             </div>
             <h1>Summary of Defusion Strategies</h1>
         </div>
