--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div data-role="popup" id="popupExercises" data-theme="a">
         <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
-        <a href="#" onclick="clear_Storage();" data-role="button">Clear Storage</a>
+        <!--<a href="#" onclick="clear_Storage();" data-role="button">Clear Storage</a>-->
 
         <ul data-role="listview" data-theme="a">
             <li data-role="list-divider" data-theme="a">
