--- a/sections/section_4_3.html
+++ b/sections/section_4_3.html
@@ -8,12 +8,13 @@
 <body>
 
     <div class='background_movietheater'>
+        
         <div>
             <img id='audio4_3on' src="../images/audio_on.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
             <img id='audio4_3off' src="../images/audio_off.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
         </div>
     </div>
-
+<div style='position:fixed;top:40px;right:10px;height:30px;width:30px;'> <p>testing</p></div>
     <audio style='visibility:hidden' width="0" height="0" id='audio4_3iOS' controls>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
