--- a/sections/section_1_1.html
+++ b/sections/section_1_1.html
@@ -16,12 +16,12 @@
 
         </div>
 
-        <audio style='display:none' width="0" height="0" id='audio1_1iOS' controls>
+        <audio style='visibility:hidden' width="0" height="0" id='audio1_1iOS'>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             Your browser does not support this audio format.
         </audio>
-        <video style='display:none' width="0" height="0" id='audio1_1Android' controls>
+        <video style='visibility:hidden' width="0" height="0" id='audio1_1Android'>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             <source src="../audio/1_1.mp3" type="audio/ogg">
