--- a/sections/section_4_3.html
+++ b/sections/section_4_3.html
@@ -80,7 +80,7 @@
             }
         </script>
 <script>
-    $('.background_movietheater').height(getRealContentHeight());
+    $('.background_movietheater').height(getRealContentHeight()-40);
 </script>
 </body>
 </html>
