--- a/sections/section_4_3.html
+++ b/sections/section_4_3.html
@@ -8,13 +8,11 @@
 <body>
 
     <div class='background_movietheater'>
-
-        <div>
-            <img id='audio4_3on' src="../images/audio_on.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
-            <img id='audio4_3off' src="../images/audio_off.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
-        </div>
     </div>
-   
+    <div>
+        <img id='audio4_3on' src="../images/audio_on.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
+        <img id='audio4_3off' src="../images/audio_off.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
+    </div>
 
     <div data-role="header" style='position:absolute;bottom: 0;width:100%;'>
         <div data-role="navbar">
@@ -80,7 +78,7 @@
             }
         </script>
 <script>
-    $('.background_movietheater').height(getRealContentHeight()-40);
+    $('.background_movietheater').height(getRealContentHeight());
 </script>
 </body>
 </html>
