--- a/sections/section_4_3.html
+++ b/sections/section_4_3.html
@@ -30,12 +30,12 @@
         </div><!-- /navbar -->
     </div>
     <!-- /footer -->
-     <audio style='visibility:hidden' width="0" height="0" id='audio4_3iOS' controls>
+     <audio style='visibility:hidden;height:0px;width:0px' id='audio4_3iOS'>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             Your browser does not support this audio format.
         </audio>
-        <video style='visibility:hidden' width="0" height="0" id='audio4_3Android' controls>
+        <video style='visibility:hidden;height:0px;width:0px' id='audio4_3Android'>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             <source src="../audio/1_1.mp3" type="audio/ogg">
