--- a/sections/section_4_6.html
+++ b/sections/section_4_6.html
@@ -12,20 +12,18 @@
             <img id='audio4_6on' src="../images/audio_on.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
             <img id='audio4_6off' src="../images/audio_off.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
         </div>
-        <audio style='visibility:hidden' width="0" height="0" id='audio4_6iOS' controls>
+        <audio style='visibility:hidden;height:0px;width:0px' id='audio4_6iOS' controls>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             Your browser does not support this audio format.
         </audio>
-        <video style='visibility:hidden' width="0" height="0" id='audio4_6Android' controls>
+        <video style='visibility:hidden;height:0px;width:0px' id='audio4_6Android' controls>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             <source src="../audio/1_1.mp3" type="audio/ogg">
             <source src="../audio/1_1.mp3" type="video/ogg">
             Your browser does not support this audio format.
         </video>
-
-
         <script>
             //autoload audio
             var section = "audio4_6";
