--- a/sections/section_1_1.html
+++ b/sections/section_1_1.html
@@ -47,12 +47,12 @@
         </div>
         <!-- /footer -->
 
-        <audio style='visibility:hidden;height:0px;width:0px;bottom:0px' id='audio1_1iOS'>
+        <audio style='display:none;height:0px;width:0px;' id='audio1_1iOS'>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             Your browser does not support this audio format.
         </audio>
-        <video style='visibility:hidden;height:0px;width:0px;bottom:0px' id='audio1_1Android'>
+        <video style='display:none;height:0px;width:0px;' id='audio1_1Android'>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             <source src="../audio/1_1.mp3" type="audio/ogg">
