--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
     <script>
         if (localStorage['usage']) {
-            localStorage['usage'] += 1;
+            localStorage['usage'] = parseInt(localStorage['usage']) + 1;
         } else {
             localStorage['usage'] = 1;
         }
