--- a/sections/section_1_2.html
+++ b/sections/section_1_2.html
@@ -16,12 +16,12 @@
             <h1>Defining Shyness and Social Anxiety</h>
         </div>
         <!-- /header -->
-         <audio style='visibility:hidden' width="0" height="0" id='audio1_2iOS' controls>
+         <audio style='visibility:hidden;height:0px;width:0px' id='audio1_2iOS' controls>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             Your browser does not support this audio format.
         </audio>
-        <video style='visibility:hidden' width="0" height="0" id='audio1_2Android' controls>
+        <video style='visibility:hidden;height:0px;width:0pxn' id='audio1_2Android' controls>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             <source src="../audio/1_1.mp3" type="audio/ogg">
@@ -47,6 +47,8 @@
                 document.getElementById(section+"on").style.visibility = "hidden";
                 document.getElementById(section+"off").style.visibility = "visible";
                 audio.play();
+            } else {
+                audio.pause();
             }
             function playAudio() {
                 if (localStorage['audio'] === 'true') {
