--- a/sections/section_1_3.html
+++ b/sections/section_1_3.html
@@ -16,54 +16,6 @@
             <h1>Fusion vs. Defusion</h>
         </div>
         <!-- /header -->
-        <audio style='visibility:hidden' width="0" height="0" id='audio1_3iOS' controls>
-            <source src="../audio/1_1.mp4" type="video/mp4">
-            <source src="../audio/1_1.mp3" type="video/mp3">
-            Your browser does not support this audio format.
-        </audio>
-        <video style='visibility:hidden' width="0" height="0" id='audio1_3Android' controls>
-            <source src="../audio/1_1.mp4" type="video/mp4">
-            <source src="../audio/1_1.mp3" type="video/mp3">
-            <source src="../audio/1_1.mp3" type="audio/ogg">
-            <source src="../audio/1_1.mp3" type="video/ogg">
-            Your browser does not support this audio format.
-        </video>
-
-
-        <script>
-            //autoload audio
-            var section = "audio1_3";
-            if (typeof(device) != "undefined") {
-                devicePlatform = device.platform;
-            } else {
-                devicePlatform = "Android";
-            }
-            if (devicePlatform === 'iOS') {
-                var audio = document.getElementById(section+"iOS");
-            } else {
-                var audio = document.getElementById(section+"Android");
-            }
-
-            if (localStorage['audio'] === 'true') {
-                document.getElementById(section+"on").style.visibility = "hidden";
-                document.getElementById(section+"off").style.visibility = "visible";
-                audio.play();
-            }
-            function playAudio() {
-                if (localStorage['audio'] === 'true') {
-                    localStorage['audio'] = 'false';
-                    document.getElementById(section+"on").style.visibility = "visible";
-                    document.getElementById(section+"off").style.visibility = "hidden";
-                    audio.pause();
-                } else {
-                    localStorage['audio'] = 'true';
-                    document.getElementById(section+"on").style.visibility = "hidden";
-                    document.getElementById(section+"off").style.visibility = "visible";
-                    audio.play();
-                }
-            }
-        </script>
-
         <div data-role="content">
             <p>
                 Emily treated the thought <i>they think I'm weird</i> as if she literally were weird, so she decided not to approach anyone at the party. For Jack, the mere thought of speaking up in class was accompanied by palpitations, as if he were actually speaking, so he chose to say nothing. These examples demonstrate that when you take your thoughts literally (as facts) or <b><i>fuse</i></b> with them, they appear to have authority, as if they were spoken by a big monster, one so powerful that you have no choice but to act on his orders if you want to keep safe.
@@ -103,7 +55,51 @@
             <!-- /navbar -->
         </div>
         <!-- /footer -->
+        <audio style='visibility:hidden;height:0px;width:0px' id='audio1_3iOS' controls>
+            <source src="../audio/1_1.mp4" type="video/mp4">
+            <source src="../audio/1_1.mp3" type="video/mp3">
+            Your browser does not support this audio format.
+        </audio>
+        <video style='visibility:hidden;height:0px;width:0px' id='audio1_3Android' controls>
+            <source src="../audio/1_1.mp4" type="video/mp4">
+            <source src="../audio/1_1.mp3" type="video/mp3">
+            <source src="../audio/1_1.mp3" type="audio/ogg">
+            <source src="../audio/1_1.mp3" type="video/ogg">
+            Your browser does not support this audio format.
+        </video>
+        <script>
+            //autoload audio
+            var section = "audio1_3";
+            if (typeof(device) != "undefined") {
+                devicePlatform = device.platform;
+            } else {
+                devicePlatform = "Android";
+            }
+            if (devicePlatform === 'iOS') {
+                var audio = document.getElementById(section+"iOS");
+            } else {
+                var audio = document.getElementById(section+"Android");
+            }
 
+            if (localStorage['audio'] === 'true') {
+                document.getElementById(section+"on").style.visibility = "hidden";
+                document.getElementById(section+"off").style.visibility = "visible";
+                audio.play();
+            }
+            function playAudio() {
+                if (localStorage['audio'] === 'true') {
+                    localStorage['audio'] = 'false';
+                    document.getElementById(section+"on").style.visibility = "visible";
+                    document.getElementById(section+"off").style.visibility = "hidden";
+                    audio.pause();
+                } else {
+                    localStorage['audio'] = 'true';
+                    document.getElementById(section+"on").style.visibility = "hidden";
+                    document.getElementById(section+"off").style.visibility = "visible";
+                    audio.play();
+                }
+            }
+        </script>
     </div>
     <!-- /page -->
 
