--- a/sections/section_4_5.html
+++ b/sections/section_4_5.html
@@ -13,12 +13,12 @@
             <img id='audio4_5off' src="../images/audio_off.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
         </div>
     </div>
-        <audio style='visibility:hidden' width="0" height="0" id='audio4_5iOS' controls>
+        <audio style='visibility:hidden;height:0px;width:0px' width="0" height="0" id='audio4_5iOS' controls>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             Your browser does not support this audio format.
         </audio>
-        <video style='visibility:hidden' width="0" height="0" id='audio4_5Android' controls>
+        <video style='visibility:hidden;height:0px;width:0px' width="0" height="0" id='audio4_5Android' controls>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             <source src="../audio/1_1.mp3" type="audio/ogg">
