--- a/sections/section_2_1.html
+++ b/sections/section_2_1.html
@@ -79,12 +79,12 @@
             <!-- /navbar -->
         </div>
         <!-- /footer -->
-        <audio style='visibility:hidden;height:0px;width:0px' width="0" height="0" id='audio2_1iOS' controls>
+        <audio style='visibility:hidden;height:0px;width:0px' id='audio2_1iOS' controls>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             Your browser does not support this audio format.
         </audio>
-        <video style='visibility:hidden;height:0px;width:0px' width="0" height="0" id='audio2_1Android' controls>
+        <video style='visibility:hidden;height:0px;width:0px' id='audio2_1Android' controls>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             <source src="../audio/1_1.mp3" type="audio/ogg">
