--- a/sections/section_5.html
+++ b/sections/section_5.html
@@ -16,12 +16,12 @@
             <h1>Summary of Defusion Strategies</h1>
         </div>
         <!-- /header -->
-        <audio style='visibility:hidden;z-index:-1;' width="0" height="0" id='audio5iOS' controls>
+        <audio style='visibility:hidden;height:0px;width:0px' id='audio5iOS' controls>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             Your browser does not support this audio format.
         </audio>
-        <video style='visibility:hidden;z-index:-1;' width="0" height="0" id='audio5Android' controls>
+        <video style='visibility:hidden;height:0px;width:0px' id='audio5Android' controls>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             <source src="../audio/1_1.mp3" type="audio/ogg">
