--- a/sections/section_2_3.html
+++ b/sections/section_2_3.html
@@ -17,12 +17,12 @@
             <h1>Your Types of Anxious Thinking</h>
         </div>
         <!-- /header -->
-        <audio style='visibility:hidden' width="0" height="0" id='audio2_3iOS' controls>
+        <audio style='visibility:hidden;height:0px;width:0px' id='audio2_3iOS' controls>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             Your browser does not support this audio format.
         </audio>
-        <video style='visibility:hidden' width="0" height="0" id='audio2_3Android' controls>
+        <video style='visibility:hidden;height:0px;width:0px' id='audio2_3Android' controls>
             <source src="../audio/1_1.mp4" type="video/mp4">
             <source src="../audio/1_1.mp3" type="video/mp3">
             <source src="../audio/1_1.mp3" type="audio/ogg">
