--- a/sections/section_1_1.html
+++ b/sections/section_1_1.html
@@ -42,7 +42,7 @@
             <!-- /navbar -->
         </div>
         <!-- /footer -->
-        <div style='visibility:hidden;height:0px;width:0px;'>
+        <div style='display:none;height:0px;width:0px;'>
             <audio style='visibility:hidden;height:0px;width:0px;' id='audio1_1iOS'>
                 <source src="../audio/1_1.mp4" type="video/mp4">
                 <source src="../audio/1_1.mp3" type="video/mp3">
