--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div data-role="popup" id="popupProgress" data-theme="a">
         <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
          <div id='progress_percent'><p>Progress Completed:70%</p></div>
-        <meter id='progres_bar' value="0" min="0" max="16" style="width:100%;height:2em;margin:0px 0px 0px 0px;">75%</meter>
+        <meter id='progres_bar' value="0" min="0" max="16" style="width:100%;height:2em;margin:0px 0px 0px 0px;"></meter>
 
 
     </div>
