--- a/sections/section_1_3.html
+++ b/sections/section_1_3.html
@@ -56,13 +56,11 @@
         </div>
         <!-- /footer -->
         <audio style='visibility:hidden;height:0px;width:0px' id='audio1_3iOS' controls>
-            <source src="../audio/1_3.mp4" type="video/mp4">
-            <source src="../audio/1_3.mp3" type="video/mp3">
+            <source src="../audio/1_3.mp3" type="audio/mp3">
             Your browser does not support this audio format.
         </audio>
         <video style='visibility:hidden;height:0px;width:0px' id='audio1_3Android' controls>
-            <source src="../audio/1_3.mp4" type="video/mp4">
-            <source src="../audio/1_3.mp3" type="video/mp3">
+            <source src="../audio/1_3.mp3" type="audio/mp3">
             Your browser does not support this audio format.
         </video>
         <script>
