--- a/sections/section_4_3.html
+++ b/sections/section_4_3.html
@@ -13,13 +13,11 @@
             <img id='audio4_3off' src="../images/audio_off.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
         </div>
         <audio style='visibility:hidden;height:0px;width:0px' id='audio4_3iOS'>
-            <source src="../audio/4_3.mp4" type="video/mp4">
-            <source src="../audio/4_3.mp3" type="video/mp3">
+            <source src="../audio/4_3.mp3" type="audio/mp3">
             Your browser does not support this audio format.
         </audio>
         <video style='visibility:hidden;height:0px;width:0px' id='audio4_3Android'>
-            <source src="../audio/4_3.mp4" type="video/mp4">
-            <source src="../audio/4_3.mp3" type="video/mp3">
+            <source src="../audio/4_3.mp3" type="audio/mp3">
             Your browser does not support this audio format.
         </video>
         <script>
