--- a/sections/section_3_1.html
+++ b/sections/section_3_1.html
@@ -78,13 +78,11 @@
         </div>
         <!-- /footer -->
         <audio style='visibility:hidden;height:0px;width:0px' id='audio3_1iOS' controls>
-            <source src="../audio/3_1.mp4" type="video/mp4">
-            <source src="../audio/3_1.mp3" type="video/mp3">
+            <source src="../audio/3_1.mp3" type="audio/mp3">
             Your browser does not support this audio format.
         </audio>
         <video style='visibility:hidden;height:0px;width:0px' id='audio3_1Android' controls>
-            <source src="../audio/3_1.mp4" type="video/mp4">
-            <source src="../audio/3_1.mp3" type="video/mp3">
+            <source src="../audio/3_1.mp3" type="audio/mp3">
             Your browser does not support this audio format.
         </video>
         <script>
