--- a/sections/section_4_1.html
+++ b/sections/section_4_1.html
@@ -49,13 +49,11 @@
         </div>
         <!-- /footer -->
         <audio style='visibility:hidden;height:0px;width:0px' id='audio4_1iOS' controls>
-            <source src="../audio/4_1.mp4" type="video/mp4">
-            <source src="../audio/4_1.mp3" type="video/mp3">
+            <source src="../audio/4_1.mp3" type="audio/mp3">
             Your browser does not support this audio format.
         </audio>
         <video style='visibility:hidden;height:0px;width:0px' id='audio4_1Android' controls>
-            <source src="../audio/4_1.mp4" type="video/mp4">
-            <source src="../audio/4_1.mp3" type="video/mp3">
+            <source src="../audio/4_1.mp3" type="audio/mp3">
             Your browser does not support this audio format.
         </video>
         <script>
