--- a/sections/section_4_2.html
+++ b/sections/section_4_2.html
@@ -71,13 +71,11 @@
         </div>
         <!-- /footer -->
 <audio style='visibility:hidden;height:0px;width:0px' id='audio4_2iOS' controls>
-            <source src="../audio/4_2.mp4" type="video/mp4">
-            <source src="../audio/4_2.mp3" type="video/mp3">
+            <source src="../audio/4_2.mp3" type="audio/mp3">
             Your browser does not support this audio format.
         </audio>
         <video style='visibility:hidden;height:0px;width:0px' id='audio4_2Android' controls>
-            <source src="../audio/4_2.mp4" type="video/mp4">
-            <source src="../audio/4_2.mp3" type="video/mp3">
+            <source src="../audio/4_2.mp3" type="audio/mp3">
             Your browser does not support this audio format.
         </video>
 
