--- a/sections/section_1_1.html
+++ b/sections/section_1_1.html
@@ -47,7 +47,7 @@
             Your browser does not support this audio format.
         </audio>
         <video style='visibility:hidden;height:0px;width:0px;' id='audio1_1Android'>
-            <source src="../audio/1_1.mp3" type="video/mp3">
+            <source src="../audio/1_1.mp3">
             Your browser does not support this audio format.
         </video>
         <script>
