--- a/sections/section_1_2.html
+++ b/sections/section_1_2.html
@@ -56,7 +56,7 @@
             Your browser does not support this audio format.
         </audio>
         <video style='visibility:hidden;height:0px;width:0pxn' id='audio1_2Android' controls>
-            <source src="../audio/1_2.mp3" type="audio/mp3">
+            <source src="../audio/1_2.mp3">
             Your browser does not support this audio format.
         </video>
 
