--- a/sections/section_2_3.html
+++ b/sections/section_2_3.html
@@ -45,7 +45,7 @@
             Your browser does not support this audio format.
         </audio>
         <video style='visibility:hidden;height:0px;width:0px' id='audio2_3Android' controls>
-            <source src="../audio/2_3.mp3" type="audio/mp3">
+            <source src="../audio/2_3.mp3">
             Your browser does not support this audio format.
         </video>
         <script>
