--- a/sections/section_4_5.html
+++ b/sections/section_4_5.html
@@ -17,7 +17,7 @@
             Your browser does not support this audio format.
         </audio>
         <video style='visibility:hidden;height:0px;width:0px' id='audio4_5Android' controls>
-            <source src="../audio/4_5.mp3" type="audio/mp3">
+            <source src="../audio/4_5.mp3">
             Your browser does not support this audio format.
         </video>
 
