--- a/sections/section_1_3.html
+++ b/sections/section_1_3.html
@@ -60,7 +60,7 @@
             Your browser does not support this audio format.
         </audio>
         <video style='visibility:hidden;height:0px;width:0px' id='audio1_3Android' controls>
-            <source src="../audio/1_3.mp3" type="audio/mp3">
+            <source src="../audio/1_3.mp3">
             Your browser does not support this audio format.
         </video>
         <script>
