--- a/sections/section_2_1.html
+++ b/sections/section_2_1.html
@@ -84,7 +84,7 @@
             Your browser does not support this audio format.
         </audio>
         <video style='visibility:hidden;height:0px;width:0px' id='audio2_1Android' controls>
-            <source src="../audio/2_1.mp3" type="audio/mp3">
+            <source src="../audio/2_1.mp3">
             Your browser does not support this audio format.
         </video>
         <script>
