--- a/sections/section_2_2.html
+++ b/sections/section_2_2.html
@@ -62,7 +62,7 @@
             Your browser does not support this audio format.
         </audio>
         <video style='visibility:hidden;height:0px;width:0px' id='audio2_2Android' controls>
-            <source src="../audio/2_2.mp3" type="audio/mp3">
+            <source src="../audio/2_2.mp3">
             Your browser does not support this audio format.
         </video>
 
