--- a/sections/section_4_3.html
+++ b/sections/section_4_3.html
@@ -17,7 +17,7 @@
             Your browser does not support this audio format.
         </audio>
         <video style='visibility:hidden;height:0px;width:0px' id='audio4_3Android'>
-            <source src="../audio/4_3.mp3" type="audio/mp3">
+            <source src="../audio/4_3.mp3">
             Your browser does not support this audio format.
         </video>
         <script>
