--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
             window.plugin.notification.local.add({ 
                     id:         1, // is converted to a string
                     title:      'Reminder',
-                    message:    'Have you completed your anxiety exercise today?',
+                    message:    'Go through your defusion material!',
+                    repeat:     'daily',
                     date:       _60_seconds_from_now
             });
         }
