--- a/sections/section_1_3.html
+++ b/sections/section_1_3.html
@@ -18,13 +18,13 @@
         <!-- /header -->
         <div data-role="content">
             <p>
-                Emily treated the thought <i>they think I'm weird</i> as if she literally were weird, so she decided not to approach anyone at the party. For Jack, the mere thought of speaking up in class was accompanied by palpitations, as if he were actually speaking, so he chose to say nothing. These examples demonstrate that when you take your thoughts literally (as facts) or <b><i>fuse</i></b> with them, they appear to have authority, as if they were spoken by a big monster, one so powerful that you have no choice but to act on his orders if you want to keep safe.
+                Emily treated the thought <i>they think I'm weird</i> as if she literally were weird, so she decided not to approach anyone at the party. For Jack, the mere thought of speaking up in class was accompanied by palpitations, as if he were actually speaking, so he chose to say nothing. These examples demonstrate that when you take your thoughts literally (as facts) or <b><i>fuse</i></b> with them, they appear to have authority, as if they were spoken by a villain, one so powerful that you have no choice but to act on his orders if you want to keep safe.
             </p>
             <h3><b><i>Fusion</i></b>: Your anxious thoughts send you down the path of avoidance. </h3>
             <p>
                 On the other hand, when you are <b><i>defused</i></b> from your thoughts, you see them for what they are: a collection of words and images in your mind. This reduces their power, giving you the freedom to choose how to respond to them.
 
-                In this app, you will take a close look at your anxious thinking, and learn how to apply a wide range of defusion strategies to your fused mind. As you gain experience in unhooking from your anxious thoughts, you will develop the ability to allow your direct experience of social situations to guide your actions, instead of letting your bossy thoughts do so.
+                In this app, you will take a close look at your anxious thinking, and learn how to apply a wide range of defusion strategies to your fused mind. As you gain experience in unhooking from your anxious thoughts, you will develop the ability to allow your direct experience of social situations to guide your actions, instead of letting your intrusive thoughts do so.
             </p>
             <h3> 
                 <b><i>Defusion</i></b>: You can choose the path toward the things you value and take your anxious 
