--- a/sections/section_3_2.html
+++ b/sections/section_3_2.html
@@ -43,7 +43,7 @@
                 <br>
                 <li> 
                     <b> Singing your thoughts. </b>
-                    Try singing your thoughts to the tune of a song such as "Happy Birthday" or to your favorite (or least favorite) song. Try searching for songs that include phrases that are relevant to you ("He's So Shy" by The Pointer Sisters is an example).
+                    Try singing your thoughts to the tune of a song such as "Happy Birthday" or to your favorite (or least favorite) song. Try searching for songs that include phrases that are relevant to you.
                 </li>
                 <br>
                 <li>
