--- a/sections/section_5.html
+++ b/sections/section_5.html
@@ -18,7 +18,7 @@
         <!-- /header -->
         <div data-role="content" id='section_5_body'>
             <p>
-                You have now been introduced to the basic skills of the “defusing From Anxious Thoughts” approach to social anxiety and shyness. 
+                You have now been introduced to the basic skills of the “Defusing From Anxious Thoughts” approach to social anxiety and shyness. 
                 <br>
                 Here is a list of the defusion strategies you have learnt over the past few sections.
                 <br>
@@ -55,7 +55,7 @@
                 loadExercise_7();
             </script>
             <p>
-                As you sample these strategies, keep track of the ones that you find most helpful on your social-anxiety playing field. We have found that clients vary tremendously concerning which strategies they like and find useful. Clearly, "no single size fits all". However, we hope that some of these strategies will be a useful tool to help you "get out of your mind and into your life"! 
+                As you sample these strategies, keep track of the ones that you find most helpful. We have found that clients vary tremendously concerning which strategies they like and find useful. Clearly, "no single size fits all". However, we hope that some of these strategies will be a useful tool to help you "get out of your mind and into your life"! 
             </p>
         </div>
         <!-- /content -->
