--- a/sections/section_1_2.html
+++ b/sections/section_1_2.html
@@ -24,7 +24,7 @@
                 <b><i>Social anxiety</b></i> is a broader term that includes shyness, as well as the experience of fear when being observed by others (for example, while mingling at a party) and performing in front of others (for example, giving a speech). Interacting with others, being observed by others, and performing in front of others are the main types of feared social situations.
                 <br>
                 <br>
-                Shy and socially anxious people are nervous in these situations because they fear that they will say or do something embarrassing (such as spill a drink or forget their lines), show symptoms of anxiety (such as blushing, trembling, and sweating), or otherwise be scrutinized and judged critically by others (for example, as clumsy, incompetent, weak, and so on). The specific details of feared outcomes vary considerably from person to person; however, most social fears come down to a concern about coming up short in the eyes of others.
+                Shy and socially anxious people are nervous in these situations because they fear that they will say or do something embarrassing (such as spill a drink or forget their lines), show symptoms of anxiety (such as blushing, trembling, and sweating), or be scrutinized and judged critically by others (for example, as clumsy, incompetent, weak, and so on). The specific details of feared outcomes vary considerably from person to person; however, most social fears come down to a concern about coming up short in the eyes of others.
             </p>
             <div id='exercise_1'></div>
             <script>
